[gd_scene load_steps=6 format=2]

[ext_resource path="res://Spartan_Bold.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/Menu_commun.gd" type="Script" id=2]
[ext_resource path="res://Spartan.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/scenar_disp.gd" type="Script" id=4]
[ext_resource path="res://Sprites/UI/menu_white.png" type="Texture" id=5]


[node name="Root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.109804, 0.105882, 0.101961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titre" type="Label" parent="."]
margin_left = 92.0
margin_top = 3.0
margin_right = 475.0
margin_bottom = 107.0
custom_fonts/font = ExtResource( 3 )
text = "Sc√©narios"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content Holder" type="VBoxContainer" parent="."]
margin_left = 24.0
margin_top = 103.0
margin_right = 552.0
margin_bottom = 1000.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Content Holder"]
margin_right = 528.0
margin_bottom = 24.0
caret_blink = true
caret_blink_speed = 0.5

[node name="Scenars" type="ScrollContainer" parent="Content Holder"]
margin_top = 28.0
margin_right = 528.0
margin_bottom = 897.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayList" type="VBoxContainer" parent="Content Holder/Scenars"]
margin_right = 528.0
margin_bottom = 869.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Menu" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="ColorRect2" type="ColorRect" parent="Menu"]
margin_left = -2.0
margin_right = 94.0
margin_bottom = 80.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBtn" type="TextureButton" parent="Menu"]
margin_left = 8.0
margin_right = 520.0
margin_bottom = 512.0
rect_scale = Vector2( 0.15, 0.15 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 5 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Menu"]
margin_left = -320.0
margin_right = -1.0
margin_bottom = 1024.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
margin_left = -312.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 1016.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Accueil" type="Button" parent="Menu/VBoxContainer"]
margin_right = 304.0
margin_bottom = 1008.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Accueil"

[node name="TweenMenu" type="Tween" parent="Menu"]
[connection signal="text_changed" from="Content Holder/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="Menu/MenuBtn" to="." method="_on_MenuBtn_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Accueil" to="." method="_on_Accueil_pressed"]
